@@ -45,13 +45,13 @@ public class Challenge14 extends FixedAnswerChallenge {
 
     try (InputStream inputStream = Files.newInputStream(Paths.get(filePath))) {
       database = SimpleDatabase.load(creds, inputStream);
-      return database.findEntries("alibaba").get(0).getPassword();
+      return database.findEntries("alibaba").getFirst().getPassword();
     } catch (Exception | Error e) {
       log.error("Exception or Error with Challenge 14", e);
       try (InputStream inputStream =
           Files.newInputStream(Paths.get("src/test/resources/alibabacreds.kdbx"))) {
         database = SimpleDatabase.load(creds, inputStream);
-        return database.findEntries("alibaba").get(0).getPassword();
+        return database.findEntries("alibaba").getFirst().getPassword();
       } catch (Exception | Error e2) {
         log.error("Exception or Error with Challenge 14 second time", e2);
         return defaultKeepassValue;
